--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <button onclick="switchState()" id="stopBtn">Pausa</button>
+    </div>
     <canvas></canvas>
     
     <script src="javascript.js"></script>
