saving progress on pausing/starting the animation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div>
-        <button onclick="switchState()" id="stopBtn">Pausa</button>
+        <button onclick="start()"> Starta</button>
+        <button onclick="stop()" id="stopBtn">Pausa</button>
     </div>
     <canvas></canvas>
     
