--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="background-color: black;">
+    <div class="menu">
         <button onclick="start()"> Starta</button>
         <button onclick="stop()" id="stopBtn">Pausa</button>
     </div>
