added function to add more balls to the animation after it started

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="menu">
         <button onclick="start()"> Starta</button>
         <button onclick="stop()" id="stopBtn">Pausa</button>
+        <button onclick="createBall()">Lägg till en boll</button>
     </div>
     <canvas></canvas>
     
